samples/_failures_safe/1761608832_0ac521_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3b02f18a.c: In function ‘main’:
./samples/SAFE/__tmp_3b02f18a.c:158:5: error: expected declaration or statement at end of input
  158 |     }
      |     ^
